@@ -1,6 +1,9 @@
 Please see NEWS for a summary of changes since the last release suitable
 for announcements.
 
+* Fri Nov 16 2012 Thunor <thunorsif@hotmail.com>
+- Solved the hidden widgets leaving artifacts at start-up problem.
+
 * Sun Nov 11 2012 Thunor <thunorsif@hotmail.com>
 - Changed the mandatory input file directive requirement for the pixmap
   widget and removed the Mandatory column from the wiki/reference.
